--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./img/st_logo_netflix.png.webp">
     <title>Stranger Things</title>
   </head>
   <body>
